a test change for gh workflow run

--- a/src/404.liquid
+++ b/src/404.liquid
@@ -40,7 +40,7 @@ sourcePage: "not-found-page"
 
 <div class="not-found-container">
     <h1>404</h1>
-    <h2>Oops! You're Lost in Space. BRRR BRRR ROBOTO!</h2>
+    <h2>Oops! You're Lost in Space.</h2>
     <p>I do not have this page, yet. It may be lost or temporarily unavailable.</p>
     <a href="/" class="home-link">Return to Base</a>
 </div>
